# XaiHackthon

./: .gitignore  README.md  __test.py  extracted_users.json  pyproject.toml
backend/: main.py  rlBackend.py  scraper.py  x_analyzer.py  x_dm.py  x_head_hunter.py  x_scraper.py
backend/RLloop/: DeepresearchOutput.txt  grokScore.py  rl_feedback.py  test_rl_feedback.py
backend/json/: final_all_user_information.json
data/: recruiter.db  recruiter.db-shm  recruiter.db-wal  recruiter1.db
frontend/: .gitignore  drizzle.config.ts  package.json  test-chat.html  tsconfig.json
frontend/app/: globals.css  layout.tsx  page.tsx
frontend/app/api/candidates/: route.ts
frontend/app/api/candidates/[id]/: route.ts
frontend/app/api/chat/: route.ts
frontend/app/api/chat-simple/: route.ts
frontend/app/api/chat/test/: route.ts
frontend/app/api/hunt/: route.ts
frontend/app/api/jobs/: route.ts
frontend/app/api/jobs/parse-url/: route.ts
frontend/app/api/policy/: route.ts
frontend/app/api/rank/: route.ts
frontend/app/api/research/: background.ts  route.ts
frontend/app/api/research/start/: route.ts
frontend/app/api/review/: route.ts
frontend/app/interview/[id]/: page.tsx
frontend/lib/: prompts.ts  sources.ts  types.ts
frontend/lib/db/: index.ts  schema.ts  seed.ts
templates/: index.html  results.html
